[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
num-bigint = "0.4.6"
num = "0.4.3"


[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day24_2023"
path = "src/bin/day24_2023.rs"

[[bin]]
name = "day2_2021"
path = "src/bin/day2_2021.rs"